--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "devDependencies": {
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
-        "typescript": "^4.4.2",
-        "snowpack": "^3.8.8"
+        "snowpack": "^3.8.8",
+        "typescript": "^4.4.2"
     },
     "dependencies": {
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.5"
     }
 }
