--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "build": "snowpack build"
     },
     "devDependencies": {
+        "@snowpack/plugin-react-refresh": "^2.5.0",
+        "@snowpack/plugin-typescript": "^1.2.1",
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
         "snowpack": "^3.8.8",
