--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "scripts": {
         "dev": "snowpack dev",
-        "build": "snowpack build"
+        "build": "snowpack build",
+        "deploy": "gh-pages -d build"
     },
     "devDependencies": {
         "@snowpack/plugin-react-refresh": "^2.5.0",
@@ -16,6 +17,7 @@
         "typescript": "^4.4.2"
     },
     "dependencies": {
+        "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "styled-components": "^5.3.5"
