--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "scripts": {
         "dev": "snowpack dev",
-        "build": "snowpack build",
-        "deploy": "gh-pages -d build"
+        "build": "snowpack build && (echo eag.is) > ./build/CNAME",
+        "deploy": "npm run build && gh-pages -d build"
     },
     "devDependencies": {
         "@snowpack/plugin-react-refresh": "^2.5.0",
         "@snowpack/plugin-typescript": "^1.2.1",
+        "@snowpack/plugin-webpack": "^3.0.0",
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
         "snowpack": "^3.8.8",
