--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-responsive": "^9.0.0-beta.6",
         "styled-components": "^5.3.5"
     }
 }
