--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "eagis-lp",
-    "version": "1.0.0",
-    "description": "the landing page for eagis",
-    "license": "MIT",
-    "scripts": {
-        "dev": "snowpack dev",
-        "build": "snowpack build && (echo eag.is) > ./build/CNAME",
-        "deploy": "npm run build && gh-pages -d build"
-    },
-    "devDependencies": {
-        "@snowpack/plugin-react-refresh": "^2.5.0",
-        "@snowpack/plugin-typescript": "^1.2.1",
-        "@snowpack/plugin-webpack": "^3.0.0",
-        "@types/react": "^17.0.19",
-        "@types/react-dom": "^17.0.9",
-        "snowpack": "^3.8.8",
-        "typescript": "^4.4.2"
-    },
-    "dependencies": {
-        "gh-pages": "^3.2.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-responsive": "^9.0.0-beta.6",
-        "styled-components": "^5.3.5"
-    }
+	"name": "eagis-lp",
+	"version": "1.0.0",
+	"description": "the landing page for eagis",
+	"license": "MIT",
+	"scripts": {
+		"watch": "yarn build && vite",
+		"build": "snowpack build && (echo eag.is) > ./build/CNAME",
+		"deploy": "npm run build && gh-pages -d build"
+	},
+	"devDependencies": {
+		"@snowpack/plugin-react-refresh": "^2.5.0",
+		"@snowpack/plugin-typescript": "^1.2.1",
+		"@snowpack/plugin-webpack": "^3.0.0",
+		"@types/react": "^17.0.19",
+		"@types/react-dom": "^17.0.9",
+		"@types/styled-components": "^5.1.26",
+		"snowpack": "^3.8.8",
+		"typescript": "^4.4.2"
+	},
+	"dependencies": {
+		"@vitejs/plugin-react": "^2.2.0",
+		"gh-pages": "^3.2.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-responsive": "^9.0.0-beta.6",
+		"styled-components": "^5.3.6",
+		"vite": "^3.2.2"
+	}
 }
